pkg/ibmvpc/examples/iks_config_object_all_vpcs__with_grouping.txt
Connectivity for VPC ky-test-vpc
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-ciui60sd0qqbef35up90[192.168.36.5],iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-ciui60sd0qqbef35up90[192.168.40.5],iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.32.5] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-ciui60sd0qqbef35up90[192.168.32.5],iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-ciui60sd0qqbef35up90[192.168.40.5],iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.36.5] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-ciui60sd0qqbef35up90[192.168.32.5],iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-ciui60sd0qqbef35up90[192.168.36.5],iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-ciui60sd0qqbef35up90[192.168.40.5] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-node[192.168.0.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.16.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.20.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.24.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.32.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.32.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.36.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.36.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.4.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.40.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.40.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.8.4] => iks-ciui60sd0qqbef35up90[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-ciui60sd0qqbef35up90[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-ciui60sd0qqbef35up90[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.40.4] : All Connections
